2009-08-10  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Limit rights of multiforms in pytis_update_summary_rights.

2009-08-10  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Amend: yes.
	Improvements of ApplicationMenuRights columns
	
	

2009-08-10  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Improvements of ApplicationMenuRights columns.

2009-08-10  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* lib/pytis/form/screen.py:
	Add multiforms to DMP menu structure.

2009-08-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	* tools/genmenu.py:
	DMP: Don't use ambigous column names `name' and `action' anymore.
	

2009-08-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	DMP data model generalized to work on all actions, not only menu actions.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	* lib/pytis/form/application.py:
	* tools/genmenu.py:
	Initial steps towards foldable DMP.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Disable folding on any user sorting, not on other than initial.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Don't disable folding on filter, just expand all.

2009-07-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Don't fold when a user filter is active.

2009-07-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/commands_.py:
	* lib/pytis/form/list.py:
	New commands for complete folding and unfolding.

2009-07-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	* lib/pytis/presentation/types_.py:
	FoldableForm documented.

2009-07-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Fix incremental search in foldable forms.

2009-07-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py: