@@ -1,3 +1,8 @@
+2009-08-11  Milan Zamazal  <pdm@brailcom.org>
+
+	* tools/genmenu.py:
+	Don't store duplicate access rights in genmenu.
+
 2009-08-10  Milan Zamazal  <pdm@brailcom.org>
 
 	* db/db_pytis_menu.py:
